--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,7 @@
     <modules>
         <module>eureka-server</module>
         <module>user-service</module>
+        <module>oauth2-with-spring</module>
+        <module>docs</module>
     </modules>
 </project>
