--- a/oauth2-with-spring/pom.xml
+++ b/oauth2-with-spring/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>com.alpha</groupId>
     <artifactId>oauth2-with-spring</artifactId>
-    <name>Archetype - oauth2-with-spring</name>
+    <name>oauth2-with-spring</name>
     <version>1.0.0-SNAPSHOT</version>
     <properties>
         <java.version>17</java.version>
