feat(oauth): jwt claims

--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,8 @@
     <modules>
         <module>eureka-server</module>
         <module>user-service</module>
-        <module>oauth2-with-spring</module>
         <module>docs</module>
-        <module>user-api-with-auth</module>
         <module>ai-with-spring</module>
+        <module>user-service-with-auth</module>
     </modules>
 </project>
