--- a/user-service-with-auth/pom.xml
+++ b/user-service-with-auth/pom.xml
@@ -5,16 +5,27 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.4</version>
+        <version>3.3.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.alpha</groupId>
-    <artifactId>user-api-with-auth</artifactId>
+    <artifactId>user-service-with-auth</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <name>user-api-with-auth</name>
-    <description>Demo project for Spring Boot</description>
-
+    <name>user-service-with-auth</name>
+    <description>User service with oauth2 support</description>
+    <url/>
+    <licenses>
+        <license/>
+    </licenses>
+    <developers>
+        <developer/>
+    </developers>
+    <scm>
+        <connection/>
+        <developerConnection/>
+        <tag/>
+        <url/>
+    </scm>
     <properties>
         <java.version>17</java.version>
     </properties>
